--- a/client/src/assets/styles/global/color/second.scss
+++ b/client/src/assets/styles/global/color/second.scss
@@ -1,5 +1,5 @@
 :root {
-  --n-second-100: #4a4a4a;
+  --n-second-100: #777777;
   --n-second-75: #969696;
   --n-second-50: #afafaf;
   --n-second-25: #c9c9c9;
