--- a/client/src/assets/styles/index.scss
+++ b/client/src/assets/styles/index.scss
@@ -8,7 +8,7 @@
 }
 
 html {
-  font-size: var(--n-fs-p);
   line-height: var(--n-lh-regular);
+  font-weight: var(--n-fw-regular);
   color: var(--n-base);
 }
