--- a/client/src/assets/styles/index.scss
+++ b/client/src/assets/styles/index.scss
@@ -12,3 +12,8 @@ html {
   font-weight: var(--n-fw-regular);
   color: var(--n-base);
 }
+
+ul, li {
+  text-decoration: none;
+  list-style: none;
+}
