--- a/client/src/assets/styles/components/control.scss
+++ b/client/src/assets/styles/components/control.scss
@@ -1,20 +1,20 @@
 :root {
   --n-ctrl-bc: var(--n-second-50);
   --n-ctrl-bw: 1px;
-  --n-ctrl-br: 1rem;
+  --n-ctrl-br: 20px;
   --n-ctrl-is: 1.5rem;
 
-  --n-ctrl-small-px: 0.25rem;
-  --n-ctrl-small-py: 0.125rem;
-  --n-ctrl-small-sz: 1.5rem;
+  --n-ctrl-small-px: 8px;
+  --n-ctrl-small-py: 4px;
+  --n-ctrl-small-sz: 32px;
 
-  --n-ctrl-default-px: 0.5rem;
-  --n-ctrl-default-py: 0.25rem;
-  --n-ctrl-default-sz: 2rem;
+  --n-ctrl-default-px: 16px;
+  --n-ctrl-default-py: 8px;
+  --n-ctrl-default-sz: 40px;
 
-  --n-ctrl-large-px: 1rem;
-  --n-ctrl-large-py: 0.5rem;
-  --n-ctrl-large-sz: 2.5rem;
+  --n-ctrl-large-px: 32px;
+  --n-ctrl-large-py: 16px;
+  --n-ctrl-large-sz: 48px;
 
   --n-ctrl-ts: 0.25s ease-in-out;
 }
